--- a/papilo/package.json
+++ b/papilo/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9.8.6",
+    "axios": "^0.21.0",
+    "framer-motion": "^2.9.4",
     "postcss-cli": "^7.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
